# package-roman

./: .gitignore  README.md  file1.py  main.py  pyproject.toml  requirements.txt
src/: bank_read_file.py  decorators.py  external_api.py  fin_operations.py  generators.py  masks.py  processing.py  ransactions_csv_read.py  transactions_csv_read.py  transactions_xlsx_read.py  utils.py  widget.py
tests/: conftest.py  test_bank_read_file.py  test_decorators.py  test_external_api.py  test_fin_operations.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_csv_read.py  test_utils.py  test_widget.py  transactions_xlsx_read.py
